Restructure files, add new libraries
- Store logic and external libraries in js/ directory

--- a/index.html
+++ b/index.html
@@ -1,9 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <script src="jquery.js"></script>
-    <script src="data_generator.js"></script>
-    <script src="moment.js"></script>
+    <title>Twittler</title>
+    
+    <script src="js/jquery.js"></script>
+    <script src="js/data_generator.js"></script>
+    <script src="js/moment.js"></script> 
+    <script src="js/underscore-min.js"></script> 
+    <script src="js/application.js"></script>
+    
   </head>
   <body>
     <script>
