Update CSS, add logo
- style.css > add defaults for links, body, and h1
- index.html > include Google Fonts API and add logo section

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <title>Twittler</title>
 
     <link href="style.css" rel="stylesheet" type="text/css" media="screen" />
+    <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Roboto+Slab">
+    <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Exo">
 
     <script src="js/jquery.js"></script>
     <script src="js/data_generator.js"></script>
@@ -18,7 +20,11 @@
   	<source src="midnight-motion.webm" type="video/webm">
     <source src="midnight-motion.mp4" type="video/mp4">
   </video>
-    
+
+  <div id="logo">
+    <h1><a href="#">Twittler</a></h1>
+  </div>
+  
     <script>
 
       $(document).ready(function(){
