--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
   <body>
   
   	<video autoplay loop poster="midnight-motion.jpg" id="bgvid">
-  		<source src="midnight-motion.webm" type="video/webm">
-  		<source src="midnight-motion.mp4" type="video/mp4">
+  		<source src="midnight-motion-small.mp4" type="video/mp4">
   	</video>
 
   	<div id="logo">
